manual_deployment_log.txt

WARNING: You are using Node.js 25.1.0 which is not supported by Hardhat.
Please upgrade to 22.10.0 or a later LTS version (even major version number)

[dotenv@17.2.3] injecting env (0) from ../.env -- tip: 📡 add observability to secrets: https://dotenvx.com/ops
Warning: Source file does not specify required compiler version! Consider adding "pragma solidity ^0.8.28;"
--> ./contracts/PointFactory.sol


Warning: Unused function parameter. Remove or comment out the variable name to silence this warning.
   --> ./contracts/utils/ERC721r.sol:387:33:
    |
387 |     function fulfillRandomWords(uint256 _requestId, uint256[] memory randomWords) internal {
    |                                 ^^^^^^^^^^^^^^^^^^


Compiled 20 Solidity files with solc 0.8.28 (evm target: cancun)
Warning: Function state mutability can be restricted to view
  --> ./contracts/ExpireNFT.t.sol:33:5:
   |
33 |     function test_Deployment() public {
   |     ^ (Relevant source part starts here and spans across multiple lines).


Warning: Function state mutability can be restricted to view
  --> ./contracts/ExpireNFT.t.sol:42:5:
   |
42 |     function test_InitialAvailableTokens() public {
   |     ^ (Relevant source part starts here and spans across multiple lines).


Warning: Function state mutability can be restricted to view
   --> ./contracts/ExpireNFT.t.sol:463:5:
    |
463 |     function test_GetAvailableTokens() public {
    |     ^ (Relevant source part starts here and spans across multiple lines).


Warning: Function state mutability can be restricted to view
   --> ./contracts/ExpireNFT.t.sol:484:5:
    |
484 |     function test_OwnedIds_EmptyForNonOwner() public {
    |     ^ (Relevant source part starts here and spans across multiple lines).


Warning: Contract code size is 37436 bytes and exceeds 24576 bytes (a limit introduced in Spurious Dragon). This contract may not be deployable on Mainnet. Consider enabling the optimizer (with a low "runs" value!), turning off revert strings, or using libraries.
 --> ./contracts/ExpireNFT.t.sol:7:1:
  |
7 | contract ExpireNFTTest is Test {
  | ^ (Relevant source part starts here and spans across multiple lines).


Warning: Contract code size is 28101 bytes and exceeds 24576 bytes (a limit introduced in Spurious Dragon). This contract may not be deployable on Mainnet. Consider enabling the optimizer (with a low "runs" value!), turning off revert strings, or using libraries.
 --> ./contracts/MemberCard.t.sol:8:1:
  |
8 | contract MemberCardTest is Test {
  | ^ (Relevant source part starts here and spans across multiple lines).


Compiled 2 Solidity files with solc 0.8.28 (evm target: cancun)

An unexpected error occurred:

/Users/entronica/Desktop/Coding/smartcontract/scripts/deploy_manual_token.ts:1
import { ethers } from "hardhat";
         ^
SyntaxError: The requested module 'hardhat' does not provide an export named 'ethers'
    at #_instantiate (node:internal/modules/esm/module_job:254:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:369:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:671:26)
    at async runScriptWithHardhat (/Users/entronica/Desktop/Coding/smartcontract/node_modules/hardhat/dist/src/internal/builtin-plugins/run/task-action.js:14:5)
    at async Promise.all (index 0)
    at async main (/Users/entronica/Desktop/Coding/smartcontract/node_modules/hardhat/src/internal/cli/main.ts:220:5)
    at async file:///Users/entronica/Desktop/Coding/smartcontract/node_modules/hardhat/dist/src/cli.js:21:1

If you think this is a bug in Hardhat, please report it here: https://hardhat.org/report-bug
